--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,242 +1,238 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap");
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
-.header{
-    margin: 0;
-    /* background-image: url("/assets/image/background.jpg");
-    background-size: cover;
-    background-position: center center; */
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
+.header {
+  margin: 0;
+  background-image: url("/assets/image/Background-1.jpg");
+  background-size: cover;
+  background-position: center center;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
-video{
-    position: fixed;
-    z-index: 0;
+video {
+  position: fixed;
+  z-index: 0;
 }
 
-.top{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    z-index: 3;
+.top {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  z-index: 3;
 }
-.header-date-w{
-    width: 330px;
-    padding: 2rem;
+.header-date-w {
+  width: 330px;
+  padding: 2rem;
 }
-.header-date{
-    width: 200px;
-    height: 150px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-} 
-
-.date-days{
-    width: 100%;
-    text-align: center;
-    font-size: 2rem;
-    text-transform: uppercase;
+.header-date {
+  width: 200px;
+  height: 150px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.date-dates{
-    width: 100%;
-    text-align: center;
-    margin-top: -1.5rem;
-    font-size: 5rem;
+.date-days {
+  width: 100%;
+  text-align: center;
+  font-size: 2rem;
+  text-transform: uppercase;
 }
 
-.header-date-row{
-    margin-top: -2rem;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+.date-dates {
+  width: 100%;
+  text-align: center;
+  margin-top: -1.5rem;
+  font-size: 5rem;
 }
 
-.date-years{
-    width: 100%;
-    text-align: center;
-    font-size: 1rem;
-    border-right: 1px solid #000 ;
+.header-date-row {
+  margin-top: -2rem;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
-.date-months{
-    width: 100%;
-    text-align: center;
-    font-size: 1.5rem;
+.date-years {
+  width: 100%;
+  text-align: center;
+  font-size: 1rem;
+  border-right: 1px solid #000;
 }
 
-.header-time{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 330px;
-    height: 250px;
+.date-months {
+  width: 100%;
+  text-align: center;
+  font-size: 1.5rem;
 }
 
-.clock-el{
-    width: 100%;
-    border-right: 1px solid #fff;
+.header-time {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 330px;
+  height: 250px;
 }
 
-.clock-number{
-    text-align: left;
-    font-size: 5rem;
+.clock-el {
+  width: 100%;
+  border-right: 1px solid #fff;
 }
 
-.clock-name{
-    border-top: 1px solid #fff;
-    text-align: right;
-    font-size: 1.2rem;
-    margin-top: -1.5rem;
+.clock-number {
+  text-align: left;
+  font-size: 5rem;
 }
 
-.header-quotes{
-    width: 330px;
-    height: 200px;
-    padding: 3rem 4rem 0 0;
-    text-align: justify;
+.clock-name {
+  border-top: 1px solid #fff;
+  text-align: right;
+  font-size: 1.2rem;
+  margin-top: -1.5rem;
 }
 
-
-
-
-.center{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    z-index: 3;
-    margin-top: -3rem;
+.header-quotes {
+  width: 330px;
+  height: 200px;
+  padding: 3rem 4rem 0 0;
+  text-align: justify;
 }
 
-.todo-list{
-    width: 300px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.center h1{
-    color: rgb(0, 0, 0);
-    text-align: left;
-    font-size: 5rem;
-    opacity: 0.6;
+.center {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  z-index: 3;
+  margin-top: -3rem;
 }
 
-.center form{
-    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-    max-width: 100%;
-    width: 200px;
+.todo-list {
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.center h1 {
+  color: rgb(0, 0, 0);
+  text-align: left;
+  font-size: 5rem;
+  opacity: 0.6;
 }
 
-.input{
-    border: none;
-    color: #f4f4f4;
-    background-color: rgba(0, 0, 0, 0.7);
-    font-size: 1rem;
-    padding: 0.5rem 0.5rem;
-    display: block;
-    width: 200px;
+.center form {
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  max-width: 100%;
+  width: 200px;
 }
 
-.input::placeholder{
-    color: #f4f4f4;
+.input {
+  border: none;
+  color: #f4f4f4;
+  background-color: rgba(0, 0, 0, 0.7);
+  font-size: 1rem;
+  padding: 0.5rem 0.5rem;
+  display: block;
+  width: 200px;
 }
 
-.todos{
-    background-color: rgba(0, 0, 0, 0.5);
-    width: 100%;
-    color: #f4f4f4;
-    padding: 0;
-    margin: 0;
-    list-style-type: none;
+.input::placeholder {
+  color: #f4f4f4;
 }
 
-.todos li{
-    border-top: 1px solid #e5e5e5;
-    cursor: pointer;
-    width: 100%;
-    padding: 0.5rem 0.5rem;
-    font-size: 1rem;
+.todos {
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  color: #f4f4f4;
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
 }
 
-.todos li.complated{
-    color: #e5e5e5;
-    text-decoration: line-through;
+.todos li {
+  border-top: 1px solid #e5e5e5;
+  cursor: pointer;
+  width: 100%;
+  padding: 0.5rem 0.5rem;
+  font-size: 1rem;
 }
 
-.center small{
-    color: #b5b5b5;
-    text-align: center;
-    margin-top: 5px;
-    font-size: 0.6rem;
-    margin-bottom: 2rem;
+.todos li.complated {
+  color: #e5e5e5;
+  text-decoration: line-through;
 }
 
-.add{
-    background-color: #9ec862;
-    cursor: pointer;
-    border: 0;
-    border-radius: 3px;
-    color: #fff;
-    padding: 0.5rem 1rem;
-    top: 1rem;
-    right: 1rem;
-
+.center small {
+  color: #b5b5b5;
+  text-align: center;
+  margin-top: 5px;
+  font-size: 0.6rem;
+  margin-bottom: 2rem;
 }
 
-.note{
-    width: 300px;
-    height: 250px;
-    margin: 0 3rem 0 0;
-    box-shadow: 0 0 7px  4px rgba(0, 0, 0, 0.3);
-    background-color: rgba(0, 0, 0, 0.5);
+.add {
+  background-color: #9ec862;
+  cursor: pointer;
+  border: 0;
+  border-radius: 3px;
+  color: #fff;
+  padding: 0.5rem 1rem;
+  top: 1rem;
+  right: 1rem;
 }
 
-.tools{
-    background-color: #fff;
-    padding: 0.5rem;
-    display: flex;
-    justify-content: flex-end;
+.note {
+  width: 300px;
+  height: 250px;
+  margin: 0 3rem 0 0;
+  box-shadow: 0 0 7px 4px rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
-.tools h2{
-    cursor: pointer;
-    background-color: transparent;
-    color: #0f0f0f;
-    border: none;
-    font-size: 1rem;
-    margin-left: 0.5rem;
+.tools {
+  background-color: #fff;
+  padding: 0.5rem;
+  display: flex;
+  justify-content: flex-end;
 }
 
-.note .main{
-    background-color: rgba(0, 0, 0, 0.5);
-    overflow: hidden;
-    width: 100%;
-    height: 100px;
+.tools h2 {
+  cursor: pointer;
+  background-color: transparent;
+  color: #0f0f0f;
+  border: none;
+  font-size: 1rem;
+  margin-left: 0.5rem;
 }
 
-.note textarea{
-    resize: none;
-    background-color: rgba(0, 0, 0, 0.5);
-    color: #e5e5e5;
-    outline: none;
-    font-family: inherit;
-    font-size: 1.2rem;
-    border: none;
-    width: 100%;
-    height: 250px;
+.note .main {
+  background-color: rgba(0, 0, 0, 0.5);
+  overflow: hidden;
+  width: 100%;
+  height: 100px;
 }
 
-.note .hidden{
-    display: none;
+.note textarea {
+  resize: none;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #e5e5e5;
+  outline: none;
+  font-family: inherit;
+  font-size: 1.2rem;
+  border: none;
+  width: 100%;
+  height: 250px;
+}
+
+.note .hidden {
+  display: none;
 }
